--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harmony-swoop/lib",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "📖 Solidity libraries that are shared across Swoop contracts",
   "files": [
     "contracts",
@@ -29,8 +29,8 @@
     "rimraf": "^3.0.2",
     "solc": "^0.6.6",
     "ts-node": "^8.9.0",
-    "typescript": "^3.8.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "lint": "prettier ./test/*.ts --check",
