--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.0.0",
+    "husky": "^4.3.0",
     "mocha": "^7.1.1",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
