--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@harmony-swoop/lib",
-  "version": "1.1.7",
+  "name": "@swoop-exchange/lib",
+  "version": "1.0.0",
   "description": "📖 Solidity libraries that are shared across Swoop contracts",
   "files": [
     "contracts",
@@ -34,7 +34,8 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "lint": "prettier ./test/*.ts --check",
+    "lint": "yarn prettier ./test/*.ts --check",
+    "lint:fix": "yarn prettier ./test/*.ts --write",
     "precompile": "rimraf ./build/",
     "compile": "waffle",
     "pretest": "yarn compile",
